src/objects/Release__c.object
<CustomObject>
    <description>This has the release date/time, movie name(lookup), studio(lookup), territory(lookup), region(territory by control fields).</description>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field specifies that which company is giving the orders</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>Takes the release date for the movie</description>
        <inlineHelpText>Enter the release date for the movie</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field specifies the releases in the individual territories</description>
        <label>Territory</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Relates the title of the movie and it&apos;s release date</description>
        <label>Title</label>
        <referenceTo>Title__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Release ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>